Finished site2, uplaoded to jacobmott.io

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,87 +1,60 @@
-<div class="container-fluid">
+<ul id="menu">
+  <li data-menuanchor="firstPage" class="normalFont"><a href="#firstPage">Git Repos</a></li>
+  <li data-menuanchor="secondPage" class="normalFont"><a href="#secondPage">Meet the Site Admins, Bob And Axel, the dragons</a></li>
+  <li data-menuanchor="thirdPage" class="normalFont"><a href="#thirdPage">About</a></li>
+</ul>
 
+<div fullpage id="fullpage" [options]="config" (ref)="getRef($event)" #fullpageRef>
+
+
+
+  <div class="section">
+    <app-slideout>
+    </app-slideout>
+    <div class="slide">
+      <!-- <app-mycarousel class="app-mycarouselclass" id="mytopcarousel"></app-mycarousel> -->
+      <app-swipercarousel></app-swipercarousel>
+    </div>
+    <div class="slide">
+      <app-my3d id="mytopapp-my3d" meshName='basefemale.glb' [camZPos]=-10 [makeFire]="false" [makeRain]="true">
+      </app-my3d>
+    </div>
+  </div>
+
+
+  <div class="section">
+
+    <app-my3d id="siteAdminAppmy3d" meshName='GreenDragon2.9.glb' meshName2='RedDragon2021.glb' [camXPos]=10
+      [camZPos]=-70 [camYPos]=15 [camYTargetPos]=-10 [camXTargetPos]=5 [makeFire]="true" [makeRain]="false">
+    </app-my3d>
+
+  </div>
+
+  <!--   <div class="section">
+    <div class="slide">
+      <h1>Slide 3.1</h1>
+    </div>
+    <div class="slide">
+      <h1>Slide 3.2</h1>
+    </div>
+    <div class="slide">
+      <h1>Slide 3.3</h1>
+      <a routerLink="secondTest">name</a>
+    </div>
+  </div> -->
+
+
+  <div class="section">
+      <app-about></app-about>
+  </div>
 
 
 
   <!-- 
-    Main Row -->
-  <div class="row">
-
-    <!-- 
-    Left -->
-    <div class="col-sm-2">
-      <div class="col-sm-12">
-        <app-mylist></app-mylist>
-      </div>
-    </div>
-
-    <!-- 
-    Center -->
-    <div class="col-sm-5">
-
-      <div class="col-sm-12">
-        <p class="purple">Images from this repo</p>
-      </div>
-
-      <div class="col-sm-12">
-        <app-mycarousel></app-mycarousel>
-      </div>
-
-      <div class="col-sm-12">
-        <p class="purple">3d assets from this repo</p>
-      </div>
-
-      <div class="col-sm-12">
-        <app-my3d meshName='basefemale.glb' [camZPos]=-10 [makeFire]="false" [makeRain]="true"></app-my3d>
-      </div>
-
-    </div>
-
-    <!-- 
-    Right -->
-    <div class="col-sm-5">
-      <div class="col-sm-12">
-        <p class="purple">Site Admin</p>
-      </div>
-      <div class="col-sm-12">
-        <p></p>
-        <app-my3d meshName='GreenDragon2.9.glb' [camZPos]=-30 [camYPos]=10 [makeFire]="true" [makeRain]="false">
-        </app-my3d>
-      </div>
-    </div>
-
-  </div>
-
-
-
-
-
-
-
-
+  <div class="section">
+    <h1>Section 4</h1>
+    <button (click)="addSection()">Add sections and change color</button>
+    <button (click)="fullpage_api.moveTo('secondPage', 2)">Move to second page</button>
+    <button (click)="removeLast()">Remove last</button>
+  </div> -->
 </div>
-
-
-<div class="continer">
-  <div class="row mybackcolor2">
-    <div class="col-sm-12">
-      <p></p>
-      <p></p>
-      <p></p>
-    </div>
-  </div>
-
-  <div class="row mybackcolor">
-    <div class="col-sm-12">
-      <div class="col-sm-12 purpleTitle">
-        <span class="purpleTitle">JacobMott.io</span>&nbsp;
-        <a class="linkoraction" href="https://www.linkedin.com/in/jacobmott/" target="_blank">My LinkedIn</a>&nbsp;
-        <a class="linkoraction" href="https://github.com/jacobmott" target="_blank">My Github</a>&nbsp;
-        <span class="purple">This page uses custom APIs to pull in data from my github account/repos</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<router-outlet></router-outlet>
