--- a/src/app/scss/my.scss
+++ b/src/app/scss/my.scss
@@ -1,37 +1,74 @@
 .myblock {
     display: block;
-    
+
+}
+
+.fullScreen {
+    width: 100%;
+    height: 100%;
+}
+
+.clearMargins {
+    margin: 0px;
 }
 
 
-.mybackcolor{
-    background-color:#000000;
+.normalFont {
+    font-size: 14px;
 }
 
-.mybackcolor2{
-    background-color:#000000;
+.mediumFont {
+    font-size: 18px;
 }
 
-.purple{
+
+.largeFont {
+    font-size: 24px;
+}
+
+.paddedtb {
+    padding-top: 100px;
+    padding-bottom: 20px;
+}
+
+.mybackcolor {
+    background-color: #000000;
+}
+
+.mybackcolor2 {
+    background-color: #000000;
+}
+
+
+.breakwords {
+    overflow-wrap: break-word;
+}
+
+
+
+.purple {
     color: rgb(223, 56, 223);
     text-align: center;
 }
 
-.purpleTitle{
+.purpleTitle {
     color: rgb(241, 218, 3);
     text-align: center;
 }
 
-p{
-    text-align: center;
-    color: yellow;
-}
+
 
 
 .averageblock {
     display: block;
-    width: 100%;
-    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+
+    text-align: center;
+    object-fit: cover;
+    max-height: 100%;
+    max-width: 100%;
+
 }
 
 .fulllock {
@@ -72,3 +109,40 @@ blackbg {
 :host {
     height: 100%
 }
+
+
+
+
+
+.fp-controlArrow.fp-prev {
+
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+    transform: scale(1);
+    animation: pulse 2s infinite;
+
+}
+
+
+.blob {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+    transform: scale(1);
+    animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(0.90);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+    }
+
+    70% {
+        transform: scale(1.5);
+        box-shadow: 0 0 0 15px rgba(0, 0, 0, 0);
+    }
+
+    100% {
+        transform: scale(0.90);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+}
+
