--- a/src/app/swipercarousel/swipercarousel.component.html
+++ b/src/app/swipercarousel/swipercarousel.component.html
@@ -1,10 +1,12 @@
-<swiper *ngIf="!imagesNotLoadedYet" [effect]="'coverflow'" [grabCursor]="true" [centeredSlides]="true" [slidesPerView]="'auto'" [coverflowEffect]="{
-      rotate: 50,
-      stretch: 0,
-      depth: 100,
-      modifier: 1,
-      slideShadows: true
-    }" [pagination]="myPagination">
-    <ng-template swiperSlide *ngFor="let img of images;"><img src={{img.url}} /></ng-template>
+<swiper #newSwiper (swiper)="onSwiper($event)" (slideChange)="onSlideChange()"
+  style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff"  [config]="config"
+  *ngIf="!imagesNotLoadedYet" class="mySwiper2">
+  <ng-template swiperSlide *ngFor="let img of images;"><img src={{img.url}} /></ng-template>
 </swiper>
+<swiper #newThumbsSwiper [config]="thumbConfig" (swiper)="onSwiper2($event)" (slideChange)="onSlideChange2()"
+  *ngIf="!imagesNotLoadedYet" class="mySwiper">
+  <ng-template swiperSlide *ngFor="let img of images;"><img src={{img.url}} /></ng-template>
+</swiper>
+
+
 <app-spinner *ngIf="imagesNotLoadedYet" whatClass='newClass' message='Loading Repo Images'></app-spinner>
