--- a/src/app/swipercarousel/swipercarousel.component.scss
+++ b/src/app/swipercarousel/swipercarousel.component.scss
@@ -1,26 +1,32 @@
-@import "~swiper/css";
-@import "~swiper/css/effect-coverflow";
-@import "~swiper/css/pagination";
-@import "~swiper/css/bundle";
+@import "swiper/css";
+@import "swiper/css/effect-coverflow";
+@import "swiper/css/pagination";
+@import "swiper/css/bundle";
+@import "swiper/css/free-mode";
+@import "swiper/css/navigation";
+@import "swiper/css/thumbs";
+
 
 .swiper {
-    width: 90%;
-    height: 90%;
-    padding-top: 100px;
-    padding-bottom: 200px;
+    width: 100%;
+    height: 80%;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
 }
 
 .swiper-slide {
     background-position: center;
     background-size: cover;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
 }
 
 
-.makeHigh{
-    height: 500px;
-    width: 500px;
+.makeHigh {
+    height: 700px;
+    width: 700px;
 }
 
 .swiper-slide img {
@@ -28,7 +34,8 @@
     max-width: 100%;
     max-height: 100%;
     width: auto;
-    height: auto;
+    height: 100%;
+    margin-top: auto;
     margin-left: auto;
     margin-right: auto;
 }
@@ -37,8 +44,8 @@
     .swiper-slide {
         background-position: center;
         background-size: cover;
-        width: 60%;
-        height: 60%;
+        width: 100%;
+        height: 100%;
     }
 
     .swiper-slide img {
@@ -46,11 +53,20 @@
         max-width: 100%;
         max-height: 100%;
         width: auto;
-        height: auto;
+        height: 100%;
+        margin-top: auto;
         margin-left: auto;
         margin-right: auto;
     }
 
+    .swiper {
+        width: 100%;
+        height: 100%;
+        margin-top: 0px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 50px;        
+    }
 }
 
 
@@ -77,4 +93,30 @@
         transform: scale(0.90);
         box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
     }
+}
+
+
+
+
+.mySwiper2 {
+    height: 80%;
+    width: 100%;
+}
+
+.mySwiper {
+    height: 15%;
+    box-sizing: border-box;
+    margin-top: 5px;
+    padding-top: 5px;
+}
+
+.mySwiper .swiper-slide {
+    width: 25%;
+    height: 100%;
+    opacity: 0.4;
+}
+
+.mySwiper .swiper-slide-thumb-active {
+    opacity: 1;
+    background: #4367aa;
 }
