Updated to new icon
Fixed issue with right slideout list of repos going over the page, now it fits on the page

--- a/src/app/slideout/slideout.component.html
+++ b/src/app/slideout/slideout.component.html
@@ -1,6 +1,6 @@
 <div (click)="open($event)" [ngClass]="{'slideout': true, 'active': slideout}">
     <div class="handle blob"></div>
-    <div class="mybody">
+    <div class="mybody" style="height: 70%">
         <app-mylist></app-mylist>
     </div>
 </div>
