--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,14 +11,18 @@
 
   <div class="section">
 
+
     <div class="slide">
       <!-- <app-mycarousel class="app-mycarouselclass" id="mytopcarousel"></app-mycarousel> -->
       <app-swipercarousel  id="mytopcarousel"></app-swipercarousel>
     </div>
     <div class="slide">
+      <app-myyoutube id="mytopapp-youtube"></app-myyoutube>
+    </div>    
+    <div class="slide">
       <app-my3d id="mytopapp-my3d" meshName='basefemale.glb' [camZPos]=-10 [makeFire]="false" [makeRain]="true">
       </app-my3d>
-    </div>
+    </div>    
   </div>
 
 
