--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,66 +1,1 @@
-<ul id="menu" class="normalFont">
-  <li data-menuanchor="firstPage"><a href="#firstPage">Git Repos</a></li>
-  <li data-menuanchor="secondPage"><a href="#secondPage">Meet the Site Admins</a></li>
-  <li data-menuanchor="thirdPage"><a href="#thirdPage">About</a></li>
-</ul>
-
-<div fullpage id="fullpage">
-
-  <app-slideout>
-  </app-slideout>
-
-  <div class="section">
-
-
-    <div class="slide">
-      <!-- <app-mycarousel class="app-mycarouselclass" id="mytopcarousel"></app-mycarousel> -->
-      <app-swipercarousel  id="mytopcarousel"></app-swipercarousel>
-    </div>
-    <div class="slide">
-      <app-myyoutube id="mytopapp-youtube"></app-myyoutube>
-    </div>    
-    <div class="slide">
-      <app-my3d id="mytopapp-my3d" meshName='basefemale.glb' [camZPos]=-10 [makeFire]="false" [makeRain]="true">
-      </app-my3d>
-    </div>    
-  </div>
-
-
-
-
-
-  <div class="section">
-
-    <app-my3d id="siteAdminAppmy3d" meshName='GreenDragon2.9.glb' meshName2='RedDragon2021.glb' [camXPos]=10
-      [camZPos]=-70 [camYPos]=15 [camYTargetPos]=-10 [camXTargetPos]=5 [makeFire]="true" [makeRain]="false">
-    </app-my3d>
-
-  </div>
-
-  <!--   <div class="section">
-    <div class="slide">
-      <h1>Slide 3.1</h1>
-    </div>
-    <div class="slide">
-      <h1>Slide 3.2</h1>
-    </div>
-    <div class="slide">
-      <h1>Slide 3.3</h1>
-      <a routerLink="secondTest">name</a>
-    </div>
-  </div> -->
-
-
-  <div class="section">
-    <app-about></app-about>
-  </div>
-
-
-  <!-- 
-  <div class="section">
-    <h1>Section 4</h1>
-    <button (click)="addSection()">Add sections and change color</button>
-    <button (click)="fullpage_api.moveTo('secondPage', 2)">Move to second page</button>
-    <button (click)="removeLast()">Remove last</button>
-  </div> -->
-</div>
+<router-outlet></router-outlet>
