--- a/src/app/webangularcompguide2023/webangularcompguide2023.component.html
+++ b/src/app/webangularcompguide2023/webangularcompguide2023.component.html
@@ -9,6 +9,9 @@
           <li class="nav-item" role="presentation" >
             <a class="nav-link" routerLinkActive="active" routerLink="weapons" [queryParams]="{defaultWeapon: 1}">weapons</a>
           </li>
+          <li class="nav-item" role="presentation" >
+            <a class="nav-link" routerLinkActive="active" routerLink="observer">observer</a>
+          </li>          
         </ul>
       </div>
     </div>
